# java-jyotish

./: CMakeLists.txt  README.md  changelog.txt  changes.txt  runchart.sh
src/: AChart.java  AChartOrig.java  AChartRun.java  JyotishCore.java  Makefile  achart-ajax.php  achart-applet.php  achart-cookie-fns.inc.php  achart-data.js  achart-datetime.js  achart-fns.inc.php  achart-help.js  achart-java.js  achart-map.js  achart-output.php  achart-parashara.inc.php  achart-server.php  achart-tz.js  achart-tzdata.js  achart.js.php  achart.php  csv-minmax.awk  data_format.txt  datetimepicker_css.js  deploy-light.sh  deploy-rsync.sh  google_maps.key.example  menu.inc.php  motion-extractor.sh  plugin.inc.php  quick-nav.inc.php  quick-test.php  server-calc.inc.php  shapegrid.py  sri-ganapati.xcf  template-parse1.awk  template-parse2.awk  template-to-java.sh  todo.txt
src/amath_base/: AChartFrame.java  Makefile  amath_const.java  amath_rot.java
src/amath_ext1/: Makefile  julian.java  naksatra.java
src/amath_ext2/: APoint.java  Makefile  amath.java
src/drupal-modules/javajyotish-data/: javajyotish_data.info  javajyotish_data.install  javajyotish_data.module  jjdata_forms.inc  jjdata_menu.inc  jjdata_updates.inc  jjdata_views.inc
src/local_content/: config.inc.php  index.php
src/plugins/: drupal.mod.php
