project(javajyotish)
cmake_minimum_required(VERSION 2.8)
aux_source_directory(SRC_LIST src)
file(GLOB CPP_SRC "*.cpp")
file(GLOB SH_SRC "src/*.sh" "src/*.py" "runchart.sh")
file(GLOB HTML_SRC "src/*.js" "*.php" "src/*.php" "src/*.html")
file(GLOB MAKEF "Makefile" "*.mak" "src/Makefile" "src/a*/Makefile")
file(GLOB JAVA_SRC "*.java" "src/*.java" "src/a*/*.java")
file(GLOB AWK_SRC "*.awk" "*.gawk" "src/*.awk" "src/*.gawk")
add_executable(${PROJECT_NAME} ${CPP_SRC} ${SH_SRC} ${HTML_SRC} ${MAKEF} ${JAVA_SRC} ${AWK_SRC})
